feat: add publication reactions
